account for network errors

--- a/download_and_busco_ncbi_genomes.config
+++ b/download_and_busco_ncbi_genomes.config
@@ -2,9 +2,11 @@ singularity.enabled = true
 singularity.autoMounts = true
 
 process{
+
 	withName: downAssem {
-    	maxForks = 10
+    	maxForks = 4
 	}
+
     withName: busco {
     	cpus = 8
         container = "$HOME/busco_v4.1.2_cv1.sif"
@@ -24,6 +26,12 @@ profiles {
         process {
                 queue = 'normal'
                 memory = '1GB'
+
+                withName: downAssem {
+    	            errorStrategyv = 'retry'
+                    maxRetries = 4
+	            }
+
                 withName: busco {
                     maxRetries = 2
                     queue = { task.attempt > 1 ? 'long' : 'normal' }
