--- a/download_and_busco_ncbi_genomes.config
+++ b/download_and_busco_ncbi_genomes.config
@@ -28,7 +28,7 @@ profiles {
                 memory = '1GB'
 
                 withName: downAssem {
-    	            errorStrategyv = 'retry'
+    	            errorStrategy = 'retry'
                     maxRetries = 4
 	            }
 
