--- a/download_and_busco_ncbi_genomes.config
+++ b/download_and_busco_ncbi_genomes.config
@@ -9,6 +9,7 @@ process{
 
     withName: busco {
     	cpus = 8
+        maxForks = 50
         container = "$HOME/busco_v4.1.2_cv1.sif"
 	}
 }
@@ -25,14 +26,16 @@ profiles {
         executor.perJobMemLimit = true
         process {
                 queue = 'normal'
-                memory = '1GB'
+                memory = '0.2GB'
 
                 withName: downAssem {
     	            errorStrategy = 'retry'
+                    errorStrategy = { task.attempt > 3 ? 'ignore' : 'retry' } 
                     maxRetries = 4
 	            }
 
                 withName: busco {
+                    errorStrategy = 'retry'
                     maxRetries = 2
                     queue = { task.attempt > 1 ? 'long' : 'normal' }
                     memory = '15.GB'
