--- a/download_and_busco_ncbi_genomes.config
+++ b/download_and_busco_ncbi_genomes.config
@@ -9,8 +9,8 @@ process{
 
     withName: busco {
     	cpus = 8
-        maxForks = 18
-        container = "$HOME/busco_v4.1.2_cv1.sif"
+        maxForks = 20
+        container = "$HOME/busco_v5.0.0_cv1.sif"
 	}
 }
 
@@ -29,13 +29,14 @@ profiles {
                 memory = '0.2GB'
 
                 withName: downAssem {
+                    queue = 'transfer'
     	            errorStrategy = 'retry'
                     errorStrategy = { task.attempt > 3 ? 'ignore' : 'retry' } 
                     maxRetries = 4
 	            }
 
                 withName: busco {
-                    errorStrategy = 'retry'
+                    errorStrategy = { task.attempt > 1 ? 'ignore' : 'retry' } 
                     maxRetries = 2
                     queue = { task.attempt > 1 ? 'long' : 'normal' }
                     memory = '15.GB'
